# hawkeyes

./: .gitignore  LICENSE  PUBLISHING.md  README.md  USER_GUIDE.md  demo.sh  example_scan.json  examples.sh  install.sh  main.py  port_scanner.py  pyproject.toml  scan_results.json  scanner.py  test_results.json  test_scan.json
.github/workflows/: release.yml
hawkeyes/: __init__.py  __main__.py  banner.py  cli.py  scanner.py
hawkeyes/utils/: __init__.py  banner_grabber.py  formatter.py  port_parser.py
scripts/: build_binary.sh  publish.sh
utils/: banner_grabber.py  formatter.py  services.py
