[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkeyes"
version = "1.0.0"
description = "Hawkeyes - Multithreaded TCP port scanner for educational cybersecurity"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Kyaw Ye Lin" },
]
keywords = ["port-scanner", "cybersecurity", "networking", "tcp", "security", "hawk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://pypi.org/project/hawkeyes/"

[project.scripts]
hawk = "hawkeyes.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hawkeyes*"]
